Cascading Change Log

3.0.2 [unreleased]

  Fixed issue with c.t.u.TupleHasher#ObjectHasher not being serializable.

  Fixed issue where an unreachable YARN timeline server could cause the application to fail.

  Fixed issue with NPE when retrieving Tez task status from timeline server.

3.0.1

  Fixed issue in c.f.t.p.Hadoop2TezFlowStepJob where the LocalResources were not passed to the AppMaster correctly
  causing ClassNotFoundException during split calculation for custom InputFormats.

3.0.0

  Updated Apache Hadoop 2 based sub-projects to 2.6.0.

  Updated c.f.h.ProcessFlow and related classes to be independent of the Hadoop platforms. The class has been moved to
  c.f.p.ProcessFlow.

  Added ability to specify counters to be logged cluster side when a slice has completed executing. See the
  c.f.FlowRuntimeProps class.

  Update build to support Gradle 2.3 by removing use of deprecated 1.x features/apis.

  Updated jgrapht to 0.9.1 so that all internal graphs can be backed by a j.u.IdentityHashMap.

  Added support for node level c.p.ConfigDef properties on both c.p.Pipe and c.t.Tap instances. Only the Tez platform
  is supported as there are no Map/Reduce independent node configurations on the MR platforms.

  Updated c.c.Cascade and c.f.Flow implementations to fire c.f.FlowListener and c.f.FlowStepListener when a c.f.Flow
  or c.f.FlowStep are marked skipped.

  Updated HashFunction in c.t.u.TupleHasher to pass null values to implementations of c.t.Hasher. All custom
  implementations must be null safe as of now.

  Update c.o.r.RegexMatcher and sub-classes to honor type coercions, allows for custom value delimiter.

  Fixed issue where the Hadoop o.a.h.m.OutputFormat would be ignored during job configuration as configured by a custom
  c.s.Scheme that was not a o.a.h.m.FileOutputFormat sub-class. In such cases a o.a.h.m.l.NullOutputFormat would be
  erroneously set and passed to c.t.Tap#openForWrite().
